--- a/package.json
+++ b/package.json
@@ -1,3 +1,9 @@
-git add package.json
-git commit -m "Node surumu 18 ile 21 arasi olarak belirlendi"
-git push origin main
+{
+  "dependencies": {
+    "body-parser": "^2.2.1",
+    "concurrently": "^9.2.1",
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1",
+    "uuid": "^13.0.0"
+  }
+}
