--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "dependencies": {
-    "body-parser": "^2.2.1",
-    "concurrently": "^9.2.1",
-    "express": "^5.1.0",
-    "socket.io": "^4.8.1",
-    "uuid": "^13.0.0"
-  }
+  "name": "LAWIANDREW CHAT V5.0",
+  "version": "1.0.0",
+  "engines": {
+    "node": ">=18.0.0 <21.0.0" 
+  },
+  "description": "...",
+  // ... geri kalan kod ...
 }
