--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-git add package-lock.json
-git commit -m "package-lock.json dosyasini Render icin ekle"
+git add package.json
+git commit -m "Render icin Node surumu 18-21 arasi sabitlendi"
 git push origin main
